--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -64,6 +64,13 @@
                 </ul>
             </div>
             <div class="wui-i-states-weshop" style="display: none">
+                 <div class="wui-i-rules xa-rules">
+                    <div class="wui-i-title">
+                        <span class="wui-i-rules-title-content">
+                            <i class="wui-i-star"></i><b>助力详情</b><i class="wui-i-star"></i>
+                        </span>
+                    </div>
+                </div>
                 <ul class="wui-i-weshop wa-weshop">
                     <li class="active weshop-top100">TOP100</li>
                     <li class="weshop-friends">我的好友</li>
