--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -999,7 +999,7 @@ p.wui-i-start_time,p.wui-i-end_time{
 	border-radius:3px
 }
 .wui-powerme-container .wui-i-weshop{
-	margin: 0 5px;
+	margin: 20px 5px 0 5px;
 }
 .wui-powerme-container .wui-i-weshop li{
 	padding: 10px 0;
