--- a/weapp/apps/customerized_apps/exlottery/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/editor/workbench.html
@@ -182,57 +182,68 @@
             pageManagerView.activePage(page);
           }
 
-            W.Broadcaster.on("image_dialog_select:deleteImage", function(cid){
-				var comp = W.component.CID2COMPONENT[cid],
-					targetClass;
-				switch (cid){
-					case '4':
-						targetClass = '.xa-lottery-first';
-						break;
-					case '5':
-						targetClass = '.xa-lottery-second';
-						break;
-					case '6':
-						targetClass = '.xa-lottery-third';
-						break;
-					default:
-						targetClass = '.xa-lottery-first';
-						break;
-				}
+          W.Broadcaster.on("image_dialog_select:deleteImage", function(options){
+            if(options.anchor == 'items'){
+              var cid = options.cid
+      				var comp = W.component.CID2COMPONENT[cid],
+      					targetClass;
+      				switch (cid){
+      					case '4':
+      						targetClass = '.xa-lottery-first';
+      						break;
+      					case '5':
+      						targetClass = '.xa-lottery-second';
+      						break;
+      					case '6':
+      						targetClass = '.xa-lottery-third';
+      						break;
+      					default:
+      						targetClass = '.xa-lottery-first';
+      						break;
+      				}
+      				var $target = $('#phoneIFrame').contents().find(targetClass);//找到子frame中的相应元素
+      				var defaultPosition = $target.attr('defaultPosition');
+      				$target.html("<span style='background-position:"+ defaultPosition + ";'></span>");
 
-				var $target = $('#phoneIFrame').contents().find(targetClass);//找到子frame中的相应元素
-				var defaultPosition = $target.attr('defaultPosition');
-				$target.html("<span style='background-position:"+ defaultPosition + ";'></span>");
+      				comp.model.set({
+      					image: ''
+      				});
+            }else{
+              if(options.anchor == 'homepage_image'){
+                var comp = W.component.CID2COMPONENT[2];
+                comp.model.set({
+                  homepage_image: ''
+                });                
+              }else{
+                $('#phoneIFrame').contents().find('.xa-exlotterydescription').css("background-image","");
+              }
+            }
+		      });
+          W.Broadcaster.on('page:rendered', function () {
+              if ("{{ exlottery.status_text }}" == "进行中" ){
+                  W.getApi().call({
+                      method: 'get',
+                      app: 'apps/exlottery',
+                      resource: 'exlottery_prize_count',
+                      args:{id:W.activityId},
+                      success: function (data) {
+                              var prize_count = $('input[data-field="prize_count"]');
+                              $(prize_count[0]).parent().find('span b').text(data["一等奖"].prize_count);
+                              $(prize_count[1]).parent().find('span b').text(data["二等奖"].prize_count);
+                              $(prize_count[2]).parent().find('span b').text(data["三等奖"].prize_count);
+                              window.total_prize_count = {
+                                  "一等奖": {total_prize_count:$(prize_count[0]).val(),left_count:$(prize_count[0]).parent().find('.xa-leftCount').text(),control_prize_count:$(prize_count[0]).val()},
+                                  "二等奖": {total_prize_count:$(prize_count[1]).val(),left_count:$(prize_count[1]).parent().find('.xa-leftCount').text(),control_prize_count:$(prize_count[1]).val()},
+                                  "三等奖": {total_prize_count:$(prize_count[2]).val(),left_count:$(prize_count[2]).parent().find('.xa-leftCount').text(),control_prize_count:$(prize_count[2]).val()},
+                                  "status": "进行中"
+                              };
+                      },
+                      error:function(){
 
-				comp.model.set({
-					image: ''
-				});
-			});
-            W.Broadcaster.on('page:rendered', function () {
-                if ("{{ exlottery.status_text }}" == "进行中" ){
-                    W.getApi().call({
-                        method: 'get',
-                        app: 'apps/exlottery',
-                        resource: 'exlottery_prize_count',
-                        args:{id:W.activityId},
-                        success: function (data) {
-                                var prize_count = $('input[data-field="prize_count"]');
-                                $(prize_count[0]).parent().find('span b').text(data["一等奖"].prize_count);
-                                $(prize_count[1]).parent().find('span b').text(data["二等奖"].prize_count);
-                                $(prize_count[2]).parent().find('span b').text(data["三等奖"].prize_count);
-                                window.total_prize_count = {
-                                    "一等奖": {total_prize_count:$(prize_count[0]).val(),left_count:$(prize_count[0]).parent().find('.xa-leftCount').text(),control_prize_count:$(prize_count[0]).val()},
-                                    "二等奖": {total_prize_count:$(prize_count[1]).val(),left_count:$(prize_count[1]).parent().find('.xa-leftCount').text(),control_prize_count:$(prize_count[1]).val()},
-                                    "三等奖": {total_prize_count:$(prize_count[2]).val(),left_count:$(prize_count[2]).parent().find('.xa-leftCount').text(),control_prize_count:$(prize_count[2]).val()},
-                                    "status": "进行中"
-                                };
-                        },
-                        error:function(){
-
-                        }
-                    });
-                }
-            });
+                      }
+                  });
+              }
+          });
         },
         error: function(resp) {
           alert('Failed to load pages in JSON. Please check it.');
@@ -302,14 +313,12 @@
           var endTime = descriptionModel.get('end_time');
           var expend = descriptionModel.get('expend');
           var delivery = descriptionModel.get('delivery');
-          //var delivery_setting = descriptionModel.get('delivery_setting');
-          //var limitation = descriptionModel.get('limitation');
           var chance = descriptionModel.get('chance');
           var allow_repeat = descriptionModel.get('allow_repeat');
             var share_description = descriptionModel.get('share_description');
             var lottery_code_count = descriptionModel.get('lottery_code_count');
-            var reply = descriptionModel.get('reply');
-            var reply_link = descriptionModel.get('reply_link');
+            var homepage_image = descriptionModel.get('homepage_image');
+            var exlottery_bg_image = descriptionModel.get('exlottery_bg_image');
           var relatedPageId = data['project_id'];
             var prizeData = {
                 "一等奖": {
@@ -337,15 +346,13 @@
             "end_time": endTime,
             "expend": expend,
             "delivery": delivery,
-            //"delivery_setting": delivery_setting,
-            //"limitation": limitation,
             "chance": chance,
             "allow_repeat": allow_repeat,
               "prize":JSON.stringify(prizeData),
               "share_description": share_description,
               "lottery_code_count": lottery_code_count,
-              "reply": reply,
-              "reply_link": reply_link
+              "homepage_image": homepage_image,
+              "exlottery_bg_image": exlottery_bg_image
           };
           if (isCreateNewData) {
             var method = 'put';
