--- a/weapp/termite/static/termite_js/app/component/appkit/exlotterydescription/exlotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/exlotterydescription/exlotterydescription.html
@@ -2,7 +2,7 @@
 
 
 {% ifequal component.type 'appkit.exlotterydescription' %}
-    <div class="wui-surveyDescription wui-lotterydescription">
+    <div class="wui-surveyDescription wui-lotterydescription xa-exlotterydescription" {% if component.model.exlottery_bg_image %}style="background-image: url({{ component.model.exlottery_bg_image }})"{% endif %}>
         <div class="wui-i-roulette wui-i-title">
             <h1 class="wui-i-innerTitle">
                 <p class="xa-title">{{component.model.title}}</p>
@@ -107,9 +107,9 @@
     </div>
 <div
     class="wui-surveyDescription xa-prizeContainer"
-    style="min-height:100px; background-color:#8d00ab;"
+    style="min-height:100px; background-color:{% if component.model.background_color %}{{ component.model.background_color }}{% else %}#8d00ab{% endif %};"
 >
-    <div class="wui-i-subtitle" style="background-color: #8d00ab;left: 35%;position: relative;text-align: center;top: 10px;width: 30%;">
+    <div class="wui-i-subtitle xa-subtitle" style="background-color: {% if component.model.background_color %}{{ component.model.background_color }}{% else %}#8d00ab{% endif %};left: 35%;position: relative;text-align: center;top: 10px;width: 30%;">
         <h2 class=" xa-subtitle" style="font-weight: 700;color: #ffffff;">活动说明</h2>
     </div>
 	<div class="wui-i-info p0">
@@ -117,46 +117,58 @@
             <div class="wui-i-settingTitle mr15">奖项设置</div>
             <div class="wui-i-settingData xa-settingData" style="margin-left: 2em;margin-top: 10px;">
                 <ul >
-                    <li data_cid="4">
-                        一等奖:&nbsp;&nbsp;
-                        {% if component.components.0.model.prize.type == 'coupon' %}
-                            <p>{{component.components.0.model.prize.data.name}}</p>
-                        {% else %}
-                            {% if component.components.0.model.prize.type == 'integral' %}
-                                <p>{{component.components.0.model.prize.data}}&nbsp;积分</P>
-                            {% else %}
-                                <p>{{component.components.0.model.prize.data}}</P>
-                            {% endif %}
+                    {% if component.components.0.model.prize_count != '0' %}
+                        {% if component.components.0.model.prize_count != '' %}
+                            <li data_cid="4">
+                                一等奖:&nbsp;&nbsp;
+                                {% if component.components.0.model.prize.type == 'coupon' %}
+                                    <p>{{component.components.0.model.prize.data.name}}</p>
+                                {% else %}
+                                    {% if component.components.0.model.prize.type == 'integral' %}
+                                        <p>{{component.components.0.model.prize.data}}&nbsp;积分</P>
+                                    {% else %}
+                                        <p>{{component.components.0.model.prize.data}}</P>
+                                    {% endif %}
+                                {% endif %}
+                            </li>
                         {% endif %}
-                    </li>
-                    <li data_cid="5">
-                        二等奖:&nbsp;&nbsp;
-                        {% if component.components.1.model.prize.type == 'coupon' %}
-                            <p>{{component.components.1.model.prize.data.name}}</p>
-                        {% else %}
-                            {% if component.components.1.model.prize.type == 'integral' %}
-                                <p>{{component.components.1.model.prize.data}}&nbsp;积分</P>
-                            {% else %}
-                                <p>{{component.components.1.model.prize.data}}</P>
-                            {% endif %}
+                    {% endif %}
+                    {% if component.components.1.model.prize_count != '0' %}
+                        {% if component.components.1.model.prize_count != '' %}
+                            <li data_cid="5">
+                                二等奖:&nbsp;&nbsp;
+                                {% if component.components.1.model.prize.type == 'coupon' %}
+                                    <p>{{component.components.1.model.prize.data.name}}</p>
+                                {% else %}
+                                    {% if component.components.1.model.prize.type == 'integral' %}
+                                        <p>{{component.components.1.model.prize.data}}&nbsp;积分</P>
+                                    {% else %}
+                                        <p>{{component.components.1.model.prize.data}}</P>
+                                    {% endif %}
+                                {% endif %}
+                            </li>
                         {% endif %}
-                    </li>
-                    <li data_cid="6" >
-                        三等奖:&nbsp;&nbsp;
-                        {% if component.components.2.model.prize.type == 'coupon' %}
-                            <p>{{component.components.2.model.prize.data.name}}</p>
-                        {% else %}
-                            {% if component.components.2.model.prize.type == 'integral' %}
-                                <p>{{component.components.2.model.prize.data}}&nbsp;积分</P>
-                            {% else %}
-                                <p>{{component.components.2.model.prize.data}}</P>
-                            {% endif %}
+                    {% endif %}
+                    {% if component.components.2.model.prize_count != '0' %}
+                        {% if component.components.2.model.prize_count != '' %}
+                            <li data_cid="6" >
+                                三等奖:&nbsp;&nbsp;
+                                {% if component.components.2.model.prize.type == 'coupon' %}
+                                    <p>{{component.components.2.model.prize.data.name}}</p>
+                                {% else %}
+                                    {% if component.components.2.model.prize.type == 'integral' %}
+                                        <p>{{component.components.2.model.prize.data}}&nbsp;积分</P>
+                                    {% else %}
+                                        <p>{{component.components.2.model.prize.data}}</P>
+                                    {% endif %}
+                                {% endif %}
+                            </li>
                         {% endif %}
-                    </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
-		<div class="wui-i-time cl pt20" style="border-top: 1px solid #ab39c4; min-height: 0;color: #ffffff;font-size: 16px;">
+		<div class="wui-i-time xa-time cl pt20" style="border-top: 1px solid {% if component.model.background_color %}#e5e5e5{% else %}#ab39c4{% endif %}; min-height: 0;color: #ffffff;font-size: 16px;">
 			<div class="wui-i-settingTitle mr15">活动时间</div>
             <div style="margin-left: 2em;margin-top: 10px;margin-bottom: 10px;">
                 <p class="wui-i-start_time">{{component.model.start_time}}</p>至<p class="wui-i-end_time">{{component.model.end_time}}</p>
@@ -175,7 +187,7 @@
                 </ul>
             </div>
         </div>
-        <div class="wui-i-description xa-description cl pt15 pb15" style="font-size: 14px;margin: 0; color: white;border-top: 1px solid #ab39c4;">
+        <div class="wui-i-description xa-description cl pt15 pb15" style="font-size: 14px;margin: 0; color: white;border-top: 1px solid {% if component.model.background_color %}#e5e5e5{% else %}#ab39c4{% endif %};">
         <div class="wui-i-settingTitle mr15 mb10">活动规则</div>
         <div style="clear: both; margin-left: 2em;" class="wui-i-description-content">
             {{component.model.description|safe}}
