--- a/weapp/termite/static/termite_js/app/component/appkit/exlotterydescription/exlotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/exlotterydescription/exlotterydescription.html
@@ -2,7 +2,7 @@
 
 
 {% ifequal component.type 'appkit.exlotterydescription' %}
-    <div class="wui-surveyDescription wui-lotterydescription xa-exlotterydescription">
+    <div class="wui-surveyDescription wui-lotterydescription xa-exlotterydescription" {% if component.model.exlottery_bg_image %}style="background-image: url({{ component.model.exlottery_bg_image }})"{% endif %}>
         <div class="wui-i-roulette wui-i-title">
             <h1 class="wui-i-innerTitle">
                 <p class="xa-title">{{component.model.title}}</p>
@@ -107,7 +107,7 @@
     </div>
 <div
     class="wui-surveyDescription xa-prizeContainer"
-    style="min-height:100px; background-color:#8d00ab;"
+    style="min-height:100px; background-color:{% if component.model.background_color %}{{ component.model.background_color }}{% else %}#8d00ab{% endif %};"
 >
     <div class="wui-i-subtitle" style="background-color: #8d00ab;left: 35%;position: relative;text-align: center;top: 10px;width: 30%;">
         <h2 class=" xa-subtitle" style="font-weight: 700;color: #ffffff;">活动说明</h2>
@@ -117,6 +117,7 @@
             <div class="wui-i-settingTitle mr15">奖项设置</div>
             <div class="wui-i-settingData xa-settingData" style="margin-left: 2em;margin-top: 10px;">
                 <ul >
+                    {% if component.components.0.model.prize_count != 0 %}
                     <li data_cid="4">
                         一等奖:&nbsp;&nbsp;
                         {% if component.components.0.model.prize.type == 'coupon' %}
@@ -129,6 +130,8 @@
                             {% endif %}
                         {% endif %}
                     </li>
+                    {% endif %}
+                    {% if component.components.1.model.prize_count != '0' %}
                     <li data_cid="5">
                         二等奖:&nbsp;&nbsp;
                         {% if component.components.1.model.prize.type == 'coupon' %}
@@ -141,6 +144,8 @@
                             {% endif %}
                         {% endif %}
                     </li>
+                    {% endif %}
+                    {% if component.components.2.model.prize_count != '0' %}
                     <li data_cid="6" >
                         三等奖:&nbsp;&nbsp;
                         {% if component.components.2.model.prize.type == 'coupon' %}
@@ -153,6 +158,7 @@
                             {% endif %}
                         {% endif %}
                     </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
