抽奖码校验成功跳转

--- a/weapp/apps/customerized_apps/exlottery/templates/webapp/m_exlottery_page.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/webapp/m_exlottery_page.html
@@ -156,7 +156,9 @@
                         verify_code: verify_code
                     },
                     success: function(data){
-                        console.log(data);
+                        var link = '/m/apps/exlottery/m_exlottery/?webapp_owner_id='+W.webappOwnerId+'&id='+W.appRecordId+'&code='+excode;
+                        console.log(link);
+                        window.location.href = link;
                     },
                     error: function(resp){
                         myWuiAlert(resp.errMsg);
