--- a/weapp/termite/static/termite_js/app/component/appkit/exlotterydescription/exlotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/exlotterydescription/exlotterydescription.html
@@ -109,7 +109,7 @@
     class="wui-surveyDescription xa-prizeContainer"
     style="min-height:100px; background-color:{% if component.model.background_color %}{{ component.model.background_color }}{% else %}#8d00ab{% endif %};"
 >
-    <div class="wui-i-subtitle" style="background-color: #8d00ab;left: 35%;position: relative;text-align: center;top: 10px;width: 30%;">
+    <div class="wui-i-subtitle xa-subtitle" style="background-color: {% if component.model.background_color %}{{ component.model.background_color }}{% else %}#8d00ab{% endif %};left: 35%;position: relative;text-align: center;top: 10px;width: 30%;">
         <h2 class=" xa-subtitle" style="font-weight: 700;color: #ffffff;">活动说明</h2>
     </div>
 	<div class="wui-i-info p0">
