--- a/weapp/termite/static/termite_js/app/component/appkit/exlotterydescription/exlotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/exlotterydescription/exlotterydescription.html
@@ -162,7 +162,7 @@
                 </ul>
             </div>
         </div>
-		<div class="wui-i-time cl pt20" style="border-top: 1px solid #ab39c4; min-height: 0;color: #ffffff;font-size: 16px;">
+		<div class="wui-i-time xa-time cl pt20" style="border-top: 1px solid {% if component.model.background_color %}#e5e5e5{% else %}#ab39c4{% endif %}; min-height: 0;color: #ffffff;font-size: 16px;">
 			<div class="wui-i-settingTitle mr15">活动时间</div>
             <div style="margin-left: 2em;margin-top: 10px;margin-bottom: 10px;">
                 <p class="wui-i-start_time">{{component.model.start_time}}</p>至<p class="wui-i-end_time">{{component.model.end_time}}</p>
@@ -181,7 +181,7 @@
                 </ul>
             </div>
         </div>
-        <div class="wui-i-description xa-description cl pt15 pb15" style="font-size: 14px;margin: 0; color: white;border-top: 1px solid #ab39c4;">
+        <div class="wui-i-description xa-description cl pt15 pb15" style="font-size: 14px;margin: 0; color: white;border-top: 1px solid {% if component.model.background_color %}#e5e5e5{% else %}#ab39c4{% endif %};">
         <div class="wui-i-settingTitle mr15 mb10">活动规则</div>
         <div style="clear: both; margin-left: 2em;" class="wui-i-description-content">
             {{component.model.description|safe}}
