--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -250,7 +250,16 @@
     var new_qrcode_url = {% if params_qrcode_url %}'{{params_qrcode_url}}'{% else %}qrcode_url{% endif %};
     var username = "{{ username }}"; //公众号的username
     var has_power = false;
-    $(function(){
+    $(function() {
+        if ($('.new_year_red').length){
+            $('html').css('background',' #900000 !important');
+        }else if ($('.orange').length){
+            $('html').css('background',' #ff7d42 !important');
+        }else if ($('.red').length){
+            $('html').css('background',' #e63041 !important');
+        }else if ($('.yellow').length){
+            $('html').css('background',' #FEF6C5 !important');
+        }
         //隐藏参与活动按钮
         $('.xa-submitButtonContainer').hide();
         if(W.isPC){
