--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -250,7 +250,16 @@
     var new_qrcode_url = {% if params_qrcode_url %}'{{params_qrcode_url}}'{% else %}qrcode_url{% endif %};
     var username = "{{ username }}"; //公众号的username
     var has_power = false;
-    $(function(){
+    $(function() {
+        if ($('.new_year_red').length){
+            $('html').css('background',' #900000 !important');
+        }else if ($('.orange').length){
+            $('html').css('background',' #ff7d42 !important');
+        }else if ($('.red').length){
+            $('html').css('background',' #e63041 !important');
+        }else if ($('.yellow').length){
+            $('html').css('background',' #FEF6C5 !important');
+        }
         //隐藏参与活动按钮
         $('.xa-submitButtonContainer').hide();
         if(W.isPC){
@@ -478,7 +487,7 @@
                     var f = follow_friend_list[i];
                     follow_li_content += "<li style='float:left;width:16.5%;position: relative'>" +
                             "<div class='wui-weshop-friend-name'><span class='wui-weshop-wraper'></span><img src='"+ f.user_icon+"'></div>" +
-                            "<div style='font-size:0.8rem'>"+f.username+"</div></li>";
+                            "<div style='font-size:0.7rem'>"+f.username+"</div></li>";
                 }
                 follow_li_content += "<li style='clear:both'></li>";
                 $('.follow_friends').append($(follow_li_content));
@@ -489,7 +498,7 @@
                     var u = unfollow_friend_list[i];
                     unfollow_li_content += "<li style='float:left;width:16.5%;position: relative'>" +
                             "<div class='wui-weshop-friend-name'><span class='wui-weshop-wraper'></span><img src='" + u.user_icon + "'></div>" +
-                            "<div style='font-size:0.8rem'>" + u.username + "</div></li>";
+                            "<div style='font-size:0.7rem'>" + u.username + "</div></li>";
                 }
                 unfollow_li_content += "<li style='clear:both'></li>";
                 $('.unfollow_friends').append($(unfollow_li_content));
