--- a/weapp/apps/customerized_apps/exlottery/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/editor/workbench.html
@@ -212,7 +212,7 @@
               if(options.anchor == 'homepage_image'){
                 var comp = W.component.CID2COMPONENT[2];
                 comp.model.set({
-                  exlottery_bg_image: ''
+                  homepage_image: ''
                 });                
               }else{
                 $('#phoneIFrame').contents().find('.xa-exlotterydescription').css("background-image","");
