--- a/weapp/apps/customerized_apps/exlottery/templates/webapp/m_exlottery_page.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/webapp/m_exlottery_page.html
@@ -15,7 +15,7 @@
     .wui-exlottery-page{
         position: relative;
         height: 100%;
-        background-size: cover;
+        background-size: 100% 100%;
     }
     .wui-exlottery-container{
         width: 70%;
