--- a/weapp/apps/customerized_apps/exlottery/templates/webapp/m_exlottery_page.html
+++ b/weapp/apps/customerized_apps/exlottery/templates/webapp/m_exlottery_page.html
@@ -156,7 +156,7 @@
                         verify_code: verify_code
                     },
                     success: function(data){
-                        var link = '/m/apps/exlottery/m_exlottery/?webapp_owner_id='+W.webappOwnerId+'&id='+W.appRecordId+'&code='+excode;
+                        var link = '/m/apps/exlottery/m_exlottery/?webapp_owner_id='+W.webappOwnerId+'&id='+W.appRecordId+'&ex_code='+excode;
                         console.log(link);
                         window.location.href = link;
                     },
