--- a/weapp/termite/static/termite_js/app/component/appkit/exlotterydescription/exlotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/exlotterydescription/exlotterydescription.html
@@ -118,46 +118,52 @@
             <div class="wui-i-settingData xa-settingData" style="margin-left: 2em;margin-top: 10px;">
                 <ul >
                     {% if component.components.0.model.prize_count != '0' %}
-                    <li data_cid="4">
-                        一等奖:&nbsp;&nbsp;
-                        {% if component.components.0.model.prize.type == 'coupon' %}
-                            <p>{{component.components.0.model.prize.data.name}}</p>
-                        {% else %}
-                            {% if component.components.0.model.prize.type == 'integral' %}
-                                <p>{{component.components.0.model.prize.data}}&nbsp;积分</P>
-                            {% else %}
-                                <p>{{component.components.0.model.prize.data}}</P>
-                            {% endif %}
+                        {% if component.components.0.model.prize_count != '' %}
+                            <li data_cid="4">
+                                一等奖:&nbsp;&nbsp;
+                                {% if component.components.0.model.prize.type == 'coupon' %}
+                                    <p>{{component.components.0.model.prize.data.name}}</p>
+                                {% else %}
+                                    {% if component.components.0.model.prize.type == 'integral' %}
+                                        <p>{{component.components.0.model.prize.data}}&nbsp;积分</P>
+                                    {% else %}
+                                        <p>{{component.components.0.model.prize.data}}</P>
+                                    {% endif %}
+                                {% endif %}
+                            </li>
                         {% endif %}
-                    </li>
                     {% endif %}
                     {% if component.components.1.model.prize_count != '0' %}
-                    <li data_cid="5">
-                        二等奖:&nbsp;&nbsp;
-                        {% if component.components.1.model.prize.type == 'coupon' %}
-                            <p>{{component.components.1.model.prize.data.name}}</p>
-                        {% else %}
-                            {% if component.components.1.model.prize.type == 'integral' %}
-                                <p>{{component.components.1.model.prize.data}}&nbsp;积分</P>
-                            {% else %}
-                                <p>{{component.components.1.model.prize.data}}</P>
-                            {% endif %}
+                        {% if component.components.1.model.prize_count != '' %}
+                            <li data_cid="5">
+                                二等奖:&nbsp;&nbsp;
+                                {% if component.components.1.model.prize.type == 'coupon' %}
+                                    <p>{{component.components.1.model.prize.data.name}}</p>
+                                {% else %}
+                                    {% if component.components.1.model.prize.type == 'integral' %}
+                                        <p>{{component.components.1.model.prize.data}}&nbsp;积分</P>
+                                    {% else %}
+                                        <p>{{component.components.1.model.prize.data}}</P>
+                                    {% endif %}
+                                {% endif %}
+                            </li>
                         {% endif %}
-                    </li>
                     {% endif %}
                     {% if component.components.2.model.prize_count != '0' %}
-                    <li data_cid="6" >
-                        三等奖:&nbsp;&nbsp;
-                        {% if component.components.2.model.prize.type == 'coupon' %}
-                            <p>{{component.components.2.model.prize.data.name}}</p>
-                        {% else %}
-                            {% if component.components.2.model.prize.type == 'integral' %}
-                                <p>{{component.components.2.model.prize.data}}&nbsp;积分</P>
-                            {% else %}
-                                <p>{{component.components.2.model.prize.data}}</P>
-                            {% endif %}
+                        {% if component.components.2.model.prize_count != '' %}
+                            <li data_cid="6" >
+                                三等奖:&nbsp;&nbsp;
+                                {% if component.components.2.model.prize.type == 'coupon' %}
+                                    <p>{{component.components.2.model.prize.data.name}}</p>
+                                {% else %}
+                                    {% if component.components.2.model.prize.type == 'integral' %}
+                                        <p>{{component.components.2.model.prize.data}}&nbsp;积分</P>
+                                    {% else %}
+                                        <p>{{component.components.2.model.prize.data}}</P>
+                                    {% endif %}
+                                {% endif %}
+                            </li>
                         {% endif %}
-                    </li>
                     {% endif %}
                 </ul>
             </div>
