添加专项签到

--- a/weapp/static_v2/js/view/common_select_website_link_view/template.html
+++ b/weapp/static_v2/js/view/common_select_website_link_view/template.html
@@ -25,5 +25,8 @@
     {{if card_exchange}}
     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="cardExchange">兑换平台</a></li>
     {{/if}}
+    {{if exsign}}
+     <li><a href="javascript:void(0);" class="xa-itemMenu" data-type="exsign">专项签到</a></li>
+    {{/if}}
 </ul>
 </script>
