--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -656,6 +656,24 @@
                     </div>
                     {{/if}}
 
+                    {{if (field.type == 'prize_selector_v5')}}
+                    <div class="propertyGroup_property_prizeSelectorField propertyGroup_property_horizontalField">
+                        <div class="propertyGroup_property_label">${field.displayName}</div>
+                        <div class="propertyGroup_property_input xa-thirdPartyPlugin" data-plugin="prize_selector_v5" data-field="${field.name}">
+                            <div
+                                data-ui-role="apps-prize-selector-v5"
+                                data-prizes='${JSON.stringify(component.model.get(field.name))}'
+                            ></div>
+                        {{if field.help}}
+                        <div style="color: #888;">
+                            {{html field.help.replace(/\n/g, "<br/>")}}
+                        </div>
+                        {{/if}}
+                        </div>
+
+                    </div>
+                    {{/if}}
+
                     {{if (field.type == 'red_packet_selector')}}
                     <div class="propertyGroup_property_redPacketSelectorField propertyGroup_property_horizontalField">
                         <div class="propertyGroup_property_label star_show">${field.displayName}</div>
@@ -928,6 +946,23 @@
                                         <div
                                             data-ui-role="apps-prize-selector-v4"
                                             data-prize='${JSON.stringify(dynamicComponent.model.get(dynamicComponentField.name))}'
+                                        >
+                                        </div>
+                                    {{if dynamicComponentField.help}}
+                                    <div>
+                                        {{html dynamicComponentField.help.replace(/\n/g, "<br/>")}}
+                                    </div>
+                                    {{/if}}
+                                    </div>
+                                </div>
+                                {{/if}}
+                                {{if (dynamicComponentField.type == 'prize_selector_v5')}}
+                                <div class="propertyGroup_property_prizeSelectorField propertyGroup_property_horizontalField">
+                                    <div class="propertyGroup_property_label">${dynamicComponentField.displayName}</div>
+                                    <div class="propertyGroup_property_input xa-thirdPartyPlugin" data-plugin="prize_selector_v5" data-field="${dynamicComponentField.name}">
+                                        <div
+                                            data-ui-role="apps-prize-selector-v5"
+                                            data-prizes='${JSON.stringify(dynamicComponent.model.get(dynamicComponentField.name))}'
                                         >
                                         </div>
                                     {{if dynamicComponentField.help}}
