--- a/weapp/apps/customerized_apps/exsign/templates/webapp/m_exsign.html
+++ b/weapp/apps/customerized_apps/exsign/templates/webapp/m_exsign.html
@@ -230,8 +230,8 @@
 					}
 				}
 				this.$coupon.find('span').append(html_str);
-				if (num > 0){
-					this.$coupon.append("<p>还有"+num+"张优惠券已领完,请联系客服补发</p>");
+				if (mun > 0){
+					this.$coupon.append("<p>还有"+mun+"张优惠券已领完,请联系客服补发</p>");
 				}
                 this.$coupon.show();
                 c_flag = false;
